# torchzero

./: .gitattributes  .readthedocs.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  readme.md  readthedocs.yaml  sitemap.xml  todos.txt
.github/: python-publish.yml  tests.yml
.github/workflows/: docs.yml  python-publish.yml  run-pytest.yml  tests.yml
API/: index.html
API/core/: index.html
Basics/: index.html
about/: index.html
css/: bigger_titles.css
docs/: Basics.ipynb  conf.py  index.md  index.rst  requirements.txt
docs/API/: all.md  core.md  index.md
docs/examples/: 1. GD.ipynb  2. Momentum.ipynb  4. Second order methods.ipynb  5. Conjugate gradient.ipynb  6. Quasi-Newton methods.ipynb  Basics.ipynb  Full-batch FashionMNIST.ipynb  LBFGS-Backtracking-RelativeWeightDecay(0.1).ipynb  LBFGS-Backtracking-RelativeWeightDecay(0.2).ipynb  LBFGS-Backtracking-RelativeWeightDecay(0.4).ipynb  LBFGS-Backtracking.ipynb  LBFGS-RelativeWeightDecay-Backtracking.ipynb  Mini-batch FashionMNIST.ipynb  SOAP-NormalizeByEMA-RelativeWeightDecay(0.1).ipynb  SOAP-NormalizeByEMA.ipynb  TrustCG(LBFGS).ipynb  TrustCG(LSR1).ipynb  full-batch training.ipynb  hmmm (Копия).ipynb  notebook.ipynb
docs/overview/: 0. Introduction.ipynb  1. First order methods.ipynb  1. Gradient descent.ipynb  10. Variance reduction.ipynb  11. Regularization.ipynb  2. Momentum.ipynb  4. Second order methods.ipynb  7. Line search.ipynb  (+9 more)
search/: search_index.json
tests/: modules.py  sus.ipynb  test_against_reference.py  test_identical.py  test_module_autograd.py  test_modules.py  test_opts.py  test_tensorlist.py  test_vars.py
torchzero/: __init__.py  designing.ipynb
(+487 files in other folders)
